--- a/src/stylesheets/objects/_contact.scss
+++ b/src/stylesheets/objects/_contact.scss
@@ -337,3 +337,11 @@ select:invalid,select option[value=""] {
   opacity: 1;
   z-index: 1001;
 }
+
+//Honeypot field
+.message2 {
+ height: 1px;
+ width: 1px;
+ position: absolute;
+ left: -1px;
+}
